tests/NormalTests/paczka1/fuzzy1/19211710.err
Error in line 2: XP2SLd0Z S461 38,8
Error in line 1: esHZu0 S461 31,4
Error in line 14: 6O7E A111 103,4
Error in line 26: XP2SLd0Z A111 44,8
Error in line 30: r7M S461 79,0
